--- a/be/pom.xml
+++ b/be/pom.xml
@@ -7,7 +7,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<groupId>com.nico</groupId>
-	<artifactId>nputest2015</artifactId>
+	<artifactId>revison</artifactId>
 
 	<properties>
 		<appengine.app.version>1</appengine.app.version>
@@ -138,8 +138,9 @@
 					<!-- address>0.0.0.0</address> <port>8080</port -->
 					<!-- Comment in the below snippet to enable local debugging with a remove 
 						debugger like those included with Eclipse or IntelliJ -->
-					<!-- jvmFlags> <jvmFlag>-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n</jvmFlag> 
-						</jvmFlags -->
+					<jvmFlags> 
+						<jvmFlag>-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n</jvmFlag> 
+						</jvmFlags>
 				</configuration>
 			</plugin>
 		</plugins>
