--- a/be/pom.xml
+++ b/be/pom.xml
@@ -63,8 +63,11 @@
 		    <artifactId>sqljdbc4</artifactId>
 		    <version>4.0</version>
 		</dependency>
-
-		
+		<dependency>
+			<groupId>com.thetransactioncompany</groupId>
+			<artifactId>cors-filter</artifactId>
+			<version>2.2.1</version>
+		</dependency>		
 
 		<!-- Test Dependencies -->
 		<dependency>
