--- a/be/src/main/webapp/WEB-INF/web.xml
+++ b/be/src/main/webapp/WEB-INF/web.xml
@@ -79,9 +79,19 @@
 	
 	</filter>
 	
+	<filter>
+	    <filter-name>myFilter</filter-name>
+	    <filter-class>com.nico.revision.rest.SecurityFilter</filter-class>
+	</filter>	
+
 	<filter-mapping>
 	    <!-- CORS Filter mapping -->
 	    <filter-name>CORS</filter-name>
+	    <url-pattern>*</url-pattern>
+	</filter-mapping>
+	
+	<filter-mapping>
+	    <filter-name>myFilter</filter-name>
 	    <url-pattern>*</url-pattern>
 	</filter-mapping>
 
