--- a/be/src/main/webapp/WEB-INF/web.xml
+++ b/be/src/main/webapp/WEB-INF/web.xml
@@ -38,7 +38,7 @@
         <welcome-file>static/index.html</welcome-file>
     </welcome-file-list>
 
-	<!--filter>
+	<filter>
 	    <filter-name>CORS</filter-name>
 	    <filter-class>com.thetransactioncompany.cors.CORSFilter</filter-class>
 	
@@ -77,17 +77,17 @@
 	        <param-value>3600</param-value>
 	    </init-param>
 	
-	</filter-->
+	</filter>
 	
 	<filter>
 	    <filter-name>SecurityFilter</filter-name>
 	    <filter-class>com.nico.revision.rest.SecurityFilter</filter-class>
 	</filter>	
 
-	<!-- filter-mapping>	    
+	<filter-mapping>	    
 	    <filter-name>CORS</filter-name>
 	    <url-pattern>*</url-pattern>
-	</filter-mapping -->
+	</filter-mapping>
 	
 	<filter-mapping>
 	    <filter-name>SecurityFilter</filter-name>
