--- a/fe/package.json
+++ b/fe/package.json
@@ -12,6 +12,14 @@
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
+    "shelljs": "^0.3.0",
+    "grunt": "~0.4.5",
+    "grunt-contrib-connect": "~0.9.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-sass": "~0.9.0",
+    "grunt-connect-proxy": "~0.1.11",
+    "grunt-contrib-jshint": "~0.11.0",
+    "grunt-contrib-clean": "~0.6.0",
+    "jshint-stylish": "~1.0.0"
   }
 }
