--- a/be/src/main/webapp/WEB-INF/web.xml
+++ b/be/src/main/webapp/WEB-INF/web.xml
@@ -35,7 +35,7 @@
 	
 
     <welcome-file-list>
-        <welcome-file>static/index.html</welcome-file>
+        <welcome-file>index.html</welcome-file>
     </welcome-file-list>
 
 	
